기본틀 추가 (피그마 ->html 변환필요)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: "NanumSquare", sans-serif;
+  background-color: #f9fafb;
+}
