레이아웃 배치 1차완료 (crud추가필요, 반응형css필요)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,3 +6,9 @@ body {
   font-family: "NanumSquare", sans-serif;
   background-color: #f9fafb;
 }
+
+@layer components {
+  .inputBox {
+    @apply;
+  }
+}
